--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,8 @@ version '1.0'
 
 apply plugin: 'java'
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+sourceCompatibility = 1.7
+targetCompatibility = 1.7
 
 repositories {
     mavenCentral()
@@ -13,5 +13,6 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     compile fileTree(dir: '/home/javalibs', include: ['*.jar'])
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile group: 'org.boofcv', name: 'feature', version: '0.18'
 }
