--- a/build.gradle
+++ b/build.gradle
@@ -15,4 +15,5 @@ dependencies {
     compile fileTree(dir: '/home/javalibs', include: ['*.jar'])
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile group: 'org.boofcv', name: 'feature', version: '0.18'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.3.1'
 }
