--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,6 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     compile fileTree(dir: '/home/javalibs', include: ['*.jar'])
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile group: 'org.boofcv', name: 'feature', version: '0.18'
+    //compile group: 'org.boofcv', name: 'feature', version: '0.18'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.3.1'
 }
